k8s/base/network-policies/allow-product-service.yaml
# Product Service can:
# - Receive traffic from Ingress and Order Service
# - Talk to PostgreSQL and Redis
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-product-service
  namespace: shopstream
spec:
  podSelector:
    matchLabels:
      app: product-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # From Ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8081
    # From Order Service (service-to-service)
    - from:
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - port: 8081
  egress:
    # To PostgreSQL
    - to:
        - namespaceSelector:
            matchLabels:
              project: shopstream
          podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
    # To Redis
    - to:
        - namespaceSelector:
            matchLabels:
              project: shopstream
          podSelector:
            matchLabels:
              app: redis
      ports:
        - port: 6379
