k8s/base/network-policies/allow-user-service.yaml
# User Service can:
# - Receive traffic from Ingress
# - Talk to PostgreSQL
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user-service
  namespace: shopstream
spec:
  podSelector:
    matchLabels:
      app: user-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8083
  egress:
    # To PostgreSQL
    - to:
        - namespaceSelector:
            matchLabels:
              project: shopstream
          podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
